# server

./: .dockerignore  .dprint.jsonc  .gitignore  .justfile  .rustfmt.toml  .rusty-hook.toml  .taplo.toml  .tokeignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  atlas.hcl  build.rs  build_docker.sh  config.ron  config.toml  docker-compose.yml  readme.md  renovate.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: deploy.yml  lint.yml  rust.yml
crates/collection_ext/: Cargo.toml
crates/collection_ext/src/: lib.rs
crates/entity/: Cargo.toml
crates/entity/src/: lib.rs
crates/fast_lrc/: Cargo.toml
crates/fast_lrc/benches/: lrc_parsing.rs  timestamp.rs
crates/fast_lrc/src/: error.rs  lib.rs  tests.rs
crates/flow/: Cargo.toml
crates/flow/src/: lib.rs
crates/libfp/: Cargo.toml
crates/libfp/src/: data.rs  hkt.rs  lib.rs
crates/macros/: Cargo.toml
crates/migration/src/: lib.rs
crates/proc_macros/: Cargo.toml
crates/proc_macros/src/: auto_mapper.rs  cmp_chain.rs  lib.rs
doc/: entity_design_draft.md
docs/en_US/: CONTRIBUTING.md
docs/ja/: CONTRIBUTING.md
docs/zh_CN/: CONTRIBUTING.md  README.md
entity/: Cargo.toml
entity/src/: extension.rs  lib.rs
entity/src/entities/: alias_group.rs  alias_group_history.rs  artist.rs  artist_alias.rs  artist_alias_history.rs  artist_group_member_history.rs  artist_history.rs  artist_history_link.rs  artist_image_queue.rs  artist_link.rs  artist_link_history.rs  artist_localized_name.rs  artist_localized_name_history.rs  artist_membership.rs  artist_membership_history.rs  artist_membership_role.rs  artist_membership_role_history.rs  artist_membership_tenure_history.rs  change_request.rs  change_request_description_revision.rs  change_request_history.rs  change_request_revision.rs  change_request_user.rs  comment.rs  comment_revision.rs  correction.rs  correction_revision.rs  correction_user.rs  credit_role.rs  credit_role_history.rs  credit_role_inheritance.rs  credit_role_inheritance_history.rs  event.rs  event_alternative_name.rs  event_alternative_name_history.rs  event_history.rs  group_member.rs  group_member_history.rs  group_member_join_leave.rs  group_member_join_leave_history.rs  (+66 more)
entity/src/extension/: from.rs  graphql.rs  impl_enums.rs  impls.rs  into_active_model.rs  into_active_value.rs  mod.rs  model_conversion.rs
macros/: Cargo.toml
macros/src/: lib.rs
migration/: Cargo.toml
migration/src/: alt_enum_name.psql  alt_enum_name_drop.sql  lib.rs  m20220101_000001_create_tables.rs  m20220101_000001_seeding_language.rs  m20241103_183032_create_release.rs  m20241103_183623_create_artist.rs  m20250403_165328_init_database.rs  m20250403_165328_init_database.sql
migration/src/m20250403_165328_init_database/: mod.rs
migration/src/m20250415_011212_create_user_following/: down.sql  mod.rs  up.sql
migration/src/m20250415_011212_create_user_followings/: down.sql  up.sql
migration/src/m20250415_021231_simplify_column_names/: down.sql  mod.rs  up.sql
migration/src/m20250415_034740_fix_release_catalog_num/: down.sql  mod.rs  up.sql
migration/src/m20250421_023142_add_user_bio/: down.sql  mod.rs  up.sql
migration/src/m20250426_014449_add_artist_location/: down.sql  mod.rs  up.sql
migration/src/m20250427_223913_create_image_queue/: down.sql
migration/src/m20250427_233244_create_artist_image/: up.sql
migration/src/m20250503_123235_rename_group_member/: down.sql  mod.rs
migration/src/m20250505_115956_add_storage_backend/: mod.rs
proc_macros/: Cargo.toml
proc_macros/src/: auto_mapper.rs  field_enum.rs  from_ref_arc.rs  lib.rs
schema/: artist.pg.hcl  artist_alias.pg.hcl  artist_group_member.pg.hcl  artist_localized_name.pg.hcl  change_request.pg.hcl  comment.pg.hcl  correction.hcl  correction.pg.hcl  credit_role.pg.hcl  enum.pg.hcl  event.pg.hcl  image.pg.hcl  label.pg.hcl  language.pg.hcl  link.pg.hcl  release.pg.hcl  schema.pg.hcl  song.pg.hcl  tag.pg.hcl  user.pg.hcl
scripts/: generate.ps1  migrate.ps1
src/: api_response.rs  constant.rs  error.rs  lib.rs  main.rs  pg_func_ext.rs  state.rs  types.rs
src/__dto/: correction.rs  mod.rs  share.rs
src/__repo/: artist.rs  correction.rs  event.rs  label.rs  mod.rs  song.rs  tag.rs
src/__resolver/: song.rs  user.rs
src/__service/: correction.rs  event.rs  juniper.rs  label.rs  mod.rs  release.rs  song.rs
src/app/: middleware.rs  mod.rs  router.rs
src/application/: correction.rs  error.rs  mod.rs
src/constant/: gen.rs
src/controller/: artist.rs  correction.rs  enum_table.rs  event.rs  graphql.rs  label.rs  lookup_table.rs  mod.rs  release.rs  song.rs  tag.rs  user.rs
src/domain/: artist_image_queue.rs  artist_release.rs  auth.rs  correction.rs  mod.rs  release_image.rs  release_image_queue.rs  user.rs
src/dto/: artist.rs  change_request.rs  correction.rs  enums.rs  event.rs  label.rs  link.rs  misc.rs  mod.rs  release.rs  share.rs  song.rs  tag.rs  trait.rs  user.rs
src/error/: error_code.rs  mod.rs  structs.rs
src/infra/: config.rs  email.rs  error.rs  logger.rs  mod.rs  redis.rs  singleton.rs  state.rs  storage.rs  worker.rs
src/infrastructure/: config.rs  database.rs  logger.rs  mod.rs  state.rs  storage.rs
src/middleware/: mod.rs
src/model/: artist.rs  change_request.rs  input.rs  link.rs  mod.rs  output.rs  prelude.rs  release.rs  song.rs
src/presentation/: api_response.rs  error.rs  mod.rs  rest.rs
src/repo/: artist.rs  correction.rs  event.rs  label.rs  mod.rs  release.rs  song.rs  tag.rs  user.rs
src/repository/: artist.rs  change_request.rs  correction.rs  release.rs  song.rs
src/resolver/: juniper.rs  mod.rs  release.rs  song.rs  user.rs
src/service/: artist.rs  config.rs  correction.rs  database.rs  event.rs  image.rs  juniper.rs  label.rs  mod.rs  redis.rs  release.rs  song.rs  tag.rs  user.rs
src/utils/: mod.rs  openapi.rs  orm.rs  traits.rs  validation.rs
tests/: basic_cleanup_test.rs  comprehensive_integration_test.rs  integration_tests.rs  resource_leak_test.rs
tests/common/: database.rs  mod.rs
tests/integration/: lib.rs
tests/service/: auth.rs
(+378 files in other folders)
