[workspace]
members = [
    ".",
    "entity",
    "migration",
]

[workspace.dependencies]
entity = { path = "./entity" }
# external
argon2 = "0.5"
axum = { version = "0.8", features = [
    "macros",
    "multipart",
] }
axum-login = { version = "0.17" }
chrono = "0.4"
dotenvy = "0.15"
itertools = "0.14"
juniper = { version = "0.16", features = [
    "chrono",
] }
juniper_axum = "0.2"
sea-orm = { version = "1.1.2", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
] }
serde = { version = "1", features = [
    "derive",
] }
tokio = { version = "1", features = [
    "full",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "chrono",
] }
utoipa = { version = "5", features = [
    "axum_extras",
    "chrono",
    "macros",
    "preserve_order",
] }

[package]
edition = "2021"
name    = "thcdb_rs"
version = "0.1.0"

[patch.crates-io]
sea-orm = { git = "https://github.com/Huliiiiii/sea-orm.git", branch = "master" }

[dependencies]
argon2.workspace = true
async-trait = { version = "0.1" }
axum.workspace = true
axum-login.workspace = true
axum_typed_multipart = "0.15"
base64 = "0.22"
bon = { version = "3.0", features = [
    "implied-bounds",
] }
chrono.workspace = true
dotenvy.workspace = true
entity.workspace = true
error_set = { version = "0.8", features = [
    "tracing",
] }
fred = { version = "10.0" }
futures = "0.3.31"
image = "0.25"
iso8601-duration = { version = "0.2", features = [
    "chrono",
] }
itertools.workspace = true
juniper.workspace = true
juniper_axum.workspace = true
once_cell = "1.20"
regex = "1.11"
sea-orm.workspace = true
serde.workspace = true
serde_json = "1.0"
tikv-jemallocator = "0.6.0"
tokio.workspace = true
tower-sessions-redis-store = "0.16.0"
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-axum = "0.1"
utoipa-swagger-ui = { version = "8", features = [
    "axum",
    "vendored",
] }
xxhash-rust = { version = "0.8", features = [
    "std",
    "xxh3",
] }
zxcvbn = "3.1"

[dev-dependencies]
rusty-hook = "0.11.2"

[profile.dev]
# codegen-backend = "cranelift"
opt-level       = 1
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units   = 1
debug           = false
lto             = "thin"
opt-level       = 3
overflow-checks = true
panic           = "abort"
