[workspace]
members = [
    ".",
    "entity",
    "macros",
    "migration",
    "proc_macros",
]

[workspace.dependencies]
entity      = { path = "./entity" }
macros      = { path = "./macros" }
migration   = { path = "./migration" }
proc_macros = { path = "./proc_macros" }
# external
argon2 = "0.5"
axum = { version = "0.8", features = [
    "macros",
    "multipart",
] }
axum-login = { version = "0.17" }
chrono = "0.4"
dotenvy = "0.15"
itertools = "0.14"
quote = "1.0.38"
sea-orm = { version = "1.1.10", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
] }
sea-orm-migration = { features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
], version = "1.1.10" }
serde = { version = "1", features = [
    "derive",
] }
syn = { version = "2.0.98", features = [
    "full",
] }
tokio = { version = "1", features = [
    "full",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "chrono",
] }
utoipa = { version = "5", features = [
    "axum_extras",
    "chrono",
    "macros",
    "preserve_order",
] }

[build-dependencies]
dotenvy.workspace = true
git2              = "0.20.1"
quote.workspace   = true
syn.workspace     = true

[package]
edition = "2024"
name    = "thcdb_rs"
version = "0.1.0"

[dependencies]
entity.workspace    = true
macros.workspace    = true
migration.workspace = true
#
ammonia = "4.0.0"
argon2.workspace = true
async-trait = { version = "0.1" }
axum.workspace = true
axum-login.workspace = true
axum_typed_multipart = "0.16"
base64 = "0.22"
bon = { version = "3.0", features = [
    "implied-bounds",
] }
bytesize = { version = "2.0.1", features = [
    "serde",
] }
chrono.workspace = true
config = { version = "0.15.8", features = [
    "ron",
], default-features = false }
derive_more = { version = "2.0.1", features = [
    "display",
    "error",
    "from",
] }
dotenvy.workspace = true
error_set = { version = "0.8", features = [
    "tracing",
] }
fred = { version = "10.0" }
futures-util = "0.3"
governor = "0.8.0"
image = "0.25"
iso8601-duration = { version = "0.2", features = [
    "chrono",
] }
itertools.workspace = true
lettre = { version = "0.11.14", default-features = false, features = [
    "builder",
    "hostname",
    "pool",
    "smtp-transport",
    "tokio1-rustls-tls",
] }
pulldown-cmark = { version = "0.13.0", default-features = false, features = [
    "html",
    "simd",
] }
rand = "0.9.0"
regex = "1.11"
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json = "1.0"
serde_repr = "0.1"
serde_with = { version = "3.12.0", features = [
    "chrono_0_4",
] }
smart-default = "0.7.1"
strum = "0.27.0"
strum_macros = "0.27.0"
thiserror = "2.0.12"
tokio.workspace = true
tower = { version = "0.5.2", features = [
    "limit",
] }
tower-http = { version = "0.6.2", features = [
    "fs",
    "trace",
    "cors",
] }
tower-sessions-redis-store = "0.16.0"
tower_governor = "0.7.0"
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-test = "0.2.5"
utoipa.workspace = true
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = [
    "axum",
] }
xxhash-rust = { version = "0.8", features = [
    "std",
    "xxh3",
] }
zxcvbn = "3.1"

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = "0.6.0"

[dev-dependencies]
rusty-hook = "0.11.2"

# https://doc.rust-lang.org/cargo/reference/profcailes.html
[profile.dev]
# codegen-backend = "cranelift"
opt-level       = 1
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units   = 1
debug           = false
lto             = "thin"
opt-level       = 3
overflow-checks = true
panic           = "abort"
